# cpp-game-animation-programming

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  compile_commands.json
docs/: HandsOnGameAnimationProgramming.md
examples/: CMakeLists.txt
examples/Samples/: CMakeLists.txt  Chapter06Sample01.cpp  Chapter06Sample01.h  Chapter08Sample01.h  Chapter09Sample01.cpp  Chapter09Sample01.h  Chapter10Sample01.cpp  Chapter10Sample01.h  Chapter10Sample02.cpp  Chapter10Sample02.h  Chapter11Sample01.cpp  Chapter11Sample01.h  Chapter11Sample02.cpp  Chapter11Sample02.h  Chapter11Sample03.cpp  Chapter11Sample03.h  Chapter12Sample01.cpp  Chapter12Sample01.h  Chapter12Sample02.cpp  Chapter12Sample02.h  Chapter12Sample03.cpp  Chapter12Sample03.h  Chapter13Sample01.cpp  Chapter13Sample01.h  Chapter13Sample02.cpp  Chapter13Sample02.h  Chapter13Sample03.cpp  Chapter13Sample03.h  Chapter14Sample01.cpp  Chapter14Sample01.h  Chapter15Sample01.cpp  Chapter15Sample01.h  Crowd.cpp  Crowd.h  Intersections.cpp  Intersections.h  SamplePoseInstance.h  SampleSelector.cpp  SampleSelector.h  WinMain.cpp
examples/Samples/Shaders/: crowd.vert
lib/: CMakeLists.txt
lib/GameEngine/: Application.h  CMakeLists.txt  Config.cmake.in  GameEngine.hpp
lib/GameEngine/AnimationSystem/: AnimBaker.cpp  AnimBaker.h  AnimTexture.cpp  AnimTexture.h  AnimationSystemLIB.hpp  Blending.cpp  Blending.h  CCDSolver.cpp  CCDSolver.h  CMakeLists.txt  Clip.cpp  Clip.h  Config.cmake.in  Constraints.cpp  Constraints.h  CrossFadeController.cpp  CrossFadeController.h  CrossFadeTarget.h  DebugDraw.cpp  DebugDraw.h  FABRIKSolver.cpp  FABRIKSolver.h  Frame.h  GLTFLoader.cpp  GLTFLoader.h  IKLeg.cpp  IKLeg.h  Pose.cpp  Pose.h  RearrangeBones.cpp  RearrangeBones.h  Skeleton.cpp  Skeleton.h  Skinning.cpp  Skinning.h  SkinningType.h  Track.cpp  Track.h  TransformTrack.cpp  TransformTrack.h
lib/GameEngine/CoreSystems/: CMakeLists.txt
lib/GameEngine/CoreSystems/MathLibrary/: CMakeLists.txt  Config.cmake.in  DualQuaternion.cpp  DualQuaternion.h  Transform.cpp  Transform.h  mat4.cpp  mat4.h  quat.cpp  quat.h  vec2.h  vec3.cpp  vec3.h  vec4.h
lib/GameEngine/RendererEngine/: Attribute.cpp  Attribute.h  CMakeLists.txt  Config.cmake.in  Draw.cpp  Draw.h  IndexBuffer.cpp  IndexBuffer.h  Interpolation.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h
lib/GameEngine/ThirdPartySDKs/: CMakeLists.txt
lib/GameEngine/ThirdPartySDKs/glTF/: CMakeLists.txt  Config.cmake.in
lib/GameEngine/ThirdPartySDKs/glad/: CMakeLists.txt  Config.cmake.in  glad.c  glad.h
lib/GameEngine/ThirdPartySDKs/nuklear/: CMakeLists.txt  Config.cmake.in  nuklear.c  nuklear.h
lib/GameEngine/ThirdPartySDKs/stb_image/: CMakeLists.txt  Config.cmake.in
